--- a/phenology-frontend/src/index.html
+++ b/phenology-frontend/src/index.html
@@ -1,16 +1,54 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Növényfenológia</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Növényfenológiai megfigyelések oldala: új megfigyelések rögzítése, adatok megjelenítése, megfigyelési útmutató, növényfenológiai cikkek."
+    />
+    <meta
+      name="keywords"
+      content="növényfenológia, fenológia, megfigyelés, meteorológia, éghajlat, éghajlatváltozás, rügyfakadás, virágzás, lombszíneződés, lombhullás, termésérés, vegetációs időszak, önkéntes, "
+    />
+    <meta name="author" content="Országos Meteorológiai Szolgálat" />
 
-<head>
-  <meta charset="utf-8">
-  <title>Növényfenológia</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
-</head>
+    <!-- Open Graph data -->
+    <!--  <meta
+  property="og:image"
+   content="https://developer.mozilla.org/static/img/opengraph-logo.png" /> -->
+    <meta property="og:image" content="" />
+    <meta property="og:image:alt" content="Országos Meteorológiai Szolgálat" />
+    <meta
+      property="og:description"
+      content="Növényfenológiai megfigyelések oldala: új megfigyelések rögzítése, adatok megjelenítése, megfigyelési útmutató, növényfenológiai cikkek."
+    />
+    <meta property="og:title" content="Növényfenológia" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.fenologia.met.hu/" />
+    <meta
+      property="og:site_name"
+      content="Növényfenológia - Országos Meteorológiai Szolgálat"
+    />
+    <meta property="og:locale" content="hu_HU" />
 
-<body>
-  <app-root></app-root>
-</body>
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Növényfenológia" />
+    <meta property="twitter:title" content="Növényfenológia" />
+    <meta
+      property="twitter:description"
+      content="Növényfenológiai megfigyelések oldala: új megfigyelések rögzítése, adatok megjelenítése, megfigyelési útmutató, növényfenológiai cikkek."
+    />
+    <meta name="twitter:domain" content="https://www.fenologia.met.hu/" />
+    <meta property="twitter:image" content="" />
 
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
+  </head>
+
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
